Fetch data from Api

--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,11 @@
 
 .App {
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-top: 7%;
+  gap: 50px;
 }
 
 .display {
@@ -46,4 +49,31 @@
 
 .calcZero {
   width: 10rem;
+}
+
+.quotesContainer {
+  display: flex;
+  width: 75vw;
+  justify-content: center;
+  flex-direction: column;
+  padding: 10px;
+  border: 4px dotted #ff7300;
+}
+
+.category {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-transform: uppercase;
+}
+
+.quote {
+  margin: 10px 0;
+  text-align: center;
+}
+
+.author {
+  display: flex;
+  justify-content: flex-end;
+  font-style: italic;
 }
