--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,8 @@
 }
 
 .display {
-  justify-content: flex-end;
   display: flex;
+  justify-content: flex-end;
   align-items: center;
   color: rgb(18, 15, 15);
   padding: 12px;
@@ -23,6 +23,8 @@
   height: 4rem;
   font-size: 3rem;
   font-weight: 700;
+  border: 2px solid;
+  width: 20.5%;
 }
 
 .calculator {
@@ -32,8 +34,12 @@
 }
 
 .btnsContainer {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 20px;
+  margin: 10% 0;
 }
 
 .Btns {
@@ -53,14 +59,16 @@
 
 .quotesContainer {
   display: flex;
-  width: 75vw;
   justify-content: center;
   flex-direction: column;
-  padding: 10px;
-  border: 4px dotted #ff7300;
+  padding: 13%;
+  scroll-behavior: smooth;
+  
 }
 
 .category {
+  font-size: 45px;
+  font-weight: 900;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -68,12 +76,64 @@
 }
 
 .quote {
+  font-size: 40px;
   margin: 10px 0;
   text-align: center;
 }
 
 .author {
+  font-size: 25px;
   display: flex;
   justify-content: flex-end;
   font-style: italic;
+}
+
+nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 17px 20px 30px;
+  background-color: #ff7300;
+  color: #fff;
+  align-items: center;
+}
+
+nav ul {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+}
+
+nav ul li {
+  padding: 0 22px;
+}
+
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  transition: 0.5s;
+  font-size: 20px;
+}
+
+nav h1 {
+  font-size: 42px;
+  font-family: sans-serif;
+}
+
+.homePage {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  padding: 70px 25px;
+  font-family: sans-serif;
+}
+
+.homePage h1 {
+  font-size: 40px;
+  color: rgb(0, 0, 0);
+}
+
+.paragraph1,.paragraph2 {
+  color: black;
+  font-size: 25px;
 }
